note 添加默认图片.

--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -95,7 +95,7 @@
       </ul>
     </div>
   -->
-    <%= cover(@note.photo, 'customer', '590x590', '') %>
+    <%= cover(@note.photo, 'customer', '590x590') %>
   </div>
   <div class="notes_winename">
     <div class="star">
