非法编辑他人note 抛出404； note的comment 字段设置为必填字段。

--- a/app/views/notes/_first_form.html.erb
+++ b/app/views/notes/_first_form.html.erb
@@ -100,7 +100,7 @@
 
         </tr>
         <tr>
-          <th>简评</th>
+          <th><span class="red">*</span>简评</th>
           <td><%= f.text_area :comment, :cols => "60", :rows => "5" %></td>
         </tr>
       <% end %>
