--- a/app/views/notes/_first_form.html.erb
+++ b/app/views/notes/_first_form.html.erb
@@ -105,6 +105,14 @@
         </tr>
       <% end %>
     </table>
+    <style type="text/css">
+      #note_comment {
+        float: left;
+      }
+      .field_with_errors {
+        overflow: auto;
+      }
+    </style>
   </div>
   <div class="btn_submit">
     <%= link_to "javascript:void(0);", :class => "btn_brown_d mr10", :id => "submit_next" do %>
