修复fancy在window中间的问题... 参考: http://stackoverflow.com/questions/8942020/centeronscroll-in-fancybox-2-0

--- a/app/views/notes/edit_second.html.erb
+++ b/app/views/notes/edit_second.html.erb
@@ -283,7 +283,7 @@
 <script type="text/template" id="trait_item_template">
   <p class="pic">
     <span class="<@= select @>"></span>
-    <a href="#">
+    <a href="javascript:void(0)">
       <@ if (image == "") { @>
       <img alt="<@= key @>" height="128" src="/assets/nose/<@= key @>.png" width="128">
       <@ } else { @>
