--- a/app/views/notes/trait.js.erb
+++ b/app/views/notes/trait.js.erb
@@ -11,9 +11,11 @@ $.fancybox({
   closeClick      : false,
   openEffect      : 'none',
   closeEffect     : 'none',
-  'href'                  : '#trait_box',
-  'centerOnScroll': true,
-  helpers        :         {
+  href                  : '#trait_box',
+  fixed: false,
+//  centerOnScroll: false,
+//  centerOnScroll: true,   for v 1.3.1
+  helpers:         {
     overlay                      : {
       opacity                 : 0.8,
       css                     : {
