--- a/app/views/notes/_first_form.html.erb
+++ b/app/views/notes/_first_form.html.erb
@@ -14,7 +14,8 @@
         <td>
           <%= form_for @note, :url =>  upload_photo_notes_path, 
             :html => {:multipart => true, :id => "form", :method => :put} do |f| %>
-            <input type="hidden" name="app_note_id" value="<%= params[:app_note_id] %>"/>
+            <input type="hidden" name="note_id" value="<%= @note.id %>"/>
+            <input type="hidden" name="app_note_id" value="<%= params[:app_note_id] || @note.app_note_id %>"/>
             <input type="hidden" name="wine_detail_id" value="<%= params[:wine_detail_id] || @note.wine_detail_id %>"/>
             <p>从电脑上传（支持JPG、GIF、PNG图片格式，且小于5M）</p>
             <p class="mt20">
@@ -29,7 +30,7 @@
               <%= image_tag "#{@note.photo_url(:middle_x)}?timestamp=#{Time.now}", :class => "btn_gray mr5" %>
             </p>
             <p class="mt20">
-              <%= link_to upload_photo_notes_path(:note_id => @note.id), :class => "btn_gray mr5", :remote => true do %>
+              <%= link_to upload_photo_notes_path(:app_note_id => @note.app_note_id, :note_id => @note.id), :class => "btn_gray mr5", :remote => true do %>
                 <span>修改照片</span>
               <% end %>
             </p>
