--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -217,7 +217,7 @@
     <%= link_to (image_tag 'common/notes_ad.jpg', :size => '250x197'), 'http://www.iwine.com/notes/app/' %>
   </div>
   <div class="sidebox">
-    <%= link_to image_tag('common/btn_add_notes.jpg', :size => '250x50', :alt => '我也喝过，去写品酒辞'), new_note_path(:app_note_id => @note.id) %>
+    <%= raw add_similar_note(@note) %>
   </div>
   <div class="sidebox">
     <div class="title">
