--- a/app/views/notes/_trait_template.html.erb
+++ b/app/views/notes/_trait_template.html.erb
@@ -32,7 +32,7 @@
   </div>
   <div class="clear"></div>
   <div id="save_button"  class="share relative clearfix align_c">
-    <a href="#" class="btn_gray_b"><span>保存</span></a>
+    <a href="javascript:void(0)" class="btn_gray_b"><span>保存</span></a>
   </div>
 </div>
 <div id="json" style="display: none;">
