--- a/public/template/add_notes_s1.html
+++ b/public/template/add_notes_s1.html
@@ -45,6 +45,9 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
     <div id="wrapper950">
       <div class="whitespace addwine">
         <h1 class="main_title">添加品酒辞</h1>
+        <div class="step_notes">
+                <div class="step_sec"></div>
+          </div>
             <div class="add_notes_step mb20">
        	    填写基本信息</div>
 <div id="stylized" class="myform mb30">
