--- a/public/template/add_notes_s2.html
+++ b/public/template/add_notes_s2.html
@@ -46,9 +46,12 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
     <div id="wrapper950">
       <div class="whitespace addwine">
         <h1 class="main_title">添加品酒辞</h1>
-            <div class="add_notes_step">
+        <div class="step_notes">
+                <div class="step_thr"></div>
+          </div>
+           <div class="add_notes_step">
        	    高级品鉴记录（选填）</div>
-        <div class="myform mb30 addnotes">
+       <div class="myform mb30 addnotes">
             <form id="form" name="form" method="post" action="#">
             <table width="100%" border="0" cellspacing="0" cellpadding="0">
               <tr>
