--- a/app/views/friends/_friend.html.erb
+++ b/app/views/friends/_friend.html.erb
@@ -1,22 +1,26 @@
 <ul class="userlist">
-  <% @recommend_friends.each do |friend| %>
-    <li>
-      <div class="userpic">
-        <%= link_to user_path(friend) do %>
-          <%= image_tag friend.user.avatar_url(:middle), :alt => friend.sns_name, :height => 50, :width => 50 %>
-        <% end %>
-      </div>
-      
-      <div class="userinfo">
-        <div class="username">
-          <%= link_to friend.user.username, user_path(friend.user) %>
-        </div>
-        <p><%= link_to follow_user_path(friend.user), :class => "btn_gray", :method => :put do %>
-              <span>加关注</span>
-           <% end %>
-         </p>
-      </div>
-    </li>
+  <% if @recommend_friends.present? %>
+      <% @recommend_friends.each do |friend| %>
+          <li>
+            <div class="userpic">
+              <%= link_to user_path(friend) do %>
+                  <%= image_tag friend.user.avatar_url(:middle), :alt => friend.sns_name, :height => 50, :width => 50 %>
+              <% end %>
+            </div>
+
+            <div class="userinfo">
+              <div class="username">
+                <%= link_to friend.user.username, user_path(friend.user) %>
+              </div>
+              <p><%= link_to follow_user_path(friend.user), :class => "btn_gray", :method => :put do %>
+                    <span>加关注</span>
+                <% end %>
+              </p>
+            </div>
+          </li>
+      <% end %>
+  <% else %>
+    暂无好友.
   <% end %>
   <div class="clear"></div>
 </ul>
