--- a/app/views/layouts/_global_nav.html.erb
+++ b/app/views/layouts/_global_nav.html.erb
@@ -1,5 +1,5 @@
 <ul>
-  <% global_nav = {"home" => root_path, "wines" => wines_path, "wineries" => wineries_path, "events" => events_path, "notes" => notes_path } %>
+  <% global_nav = {"home" => root_path, "wines" => wines_path, "wineries" => wineries_path, "notes" => notes_path, "events" => events_path } %>
   <% global_nav.each do |key, value| %>
     <% if key == "wines" || key == "wineries" || key == 'events' %>
       <%= content_tag :li, :class => "arrow" do %>
