--- a/app/views/friends/_friend.html.erb
+++ b/app/views/friends/_friend.html.erb
@@ -4,15 +4,15 @@
           <li>
             <div class="userpic">
               <%= link_to user_path(friend) do %>
-                  <%= image_tag friend.user.avatar_url(:middle), :alt => friend.sns_name, :height => 50, :width => 50 %>
+                  <%= image_tag friend.avatar_url(:middle), :alt => '', :height => 50, :width => 50 %>
               <% end %>
             </div>
 
             <div class="userinfo">
               <div class="username">
-                <%= link_to friend.user.username, user_path(friend.user) %>
+                <%= link_to friend.username, user_path(friend) %>
               </div>
-              <p><%= link_to follow_user_path(friend.user), :class => "btn_gray", :method => :put do %>
+              <p><%= link_to follow_user_path(friend), :class => "btn_gray", :method => :put do %>
                     <span>加关注</span>
                 <% end %>
               </p>
