--- a/app/views/friends/_friend.html.erb
+++ b/app/views/friends/_friend.html.erb
@@ -12,10 +12,15 @@
               <div class="username">
                 <%= link_to friend.username, user_path(friend) %>
               </div>
-              <p><%= link_to follow_user_path(friend), :class => "btn_gray", :method => :put do %>
-                    <span>加关注</span>
-                <% end %>
-              </p>
+              <% if current_user.is_following friend.id %>
+                <span>已被关注</span>
+              <% else %>
+                <p>
+                  <%= link_to follow_user_path(friend), :class => "btn_gray", :method => :put do %>
+                      <span>加关注</span>
+                  <% end %>
+                </p>
+              <% end %>
             </div>
           </li>
       <% end %>
