--- a/app/views/notes/_timeline.html.erb
+++ b/app/views/notes/_timeline.html.erb
@@ -1,6 +1,9 @@
 <% unless @notes.nil? %> 
   <% @notes.each do |note| %>
-      <div class="iw item">
+      <% item_id = get_rand_id("note", note[:note].id) %>
+      <% local_note = Note.local_note(note[:note].id) %>
+      <div class="iw item" id="<%= item_id %>">
+        <%= render :partial => "follow_and_comment_button", :locals => {:parent => local_note, :item_id => item_id} %>
         <%= render :partial => "user", :locals => {:note => note} %> 
         <div class="iw_img"> 
           <%= link_to cover(note[:photo], 'customer', '200x200', '200x200'), note_path(note[:note])%>
@@ -18,8 +21,23 @@
         <div class="iw_more">
             <%= link_to "查看完整评酒辞", note_path(note[:note]) %>
         </div>
+        <% if current_user %>
+            <div class="iw_comment clearfix" style="display:none;">
+                <div class="left">
+                    <%= link_to_user current_user, user_path(current_user, :trailing_slash => true), 
+                                                   {:with_avatar => true, :avatar_version => :thumb},
+                                                    {:width => 30, :height => 30, :alt => current_user.username} %>
+                </div>
+                <div class="right">
+                    <%= render :partial => "comments/share/ajax_form", 
+                               :locals => {:commentable => local_note,
+                                           :item_id => item_id} %>
+                </div>
+            </div>
+        <% end %>
       </div>
   <% end %> 
 <% else %> 
  <p> 还有没有数据. </p>
 <% end %> 
+<%= javascript_include_tag 'waterfall_comment_follow' %>
