--- a/public/template/notes_detail.html
+++ b/public/template/notes_detail.html
@@ -118,6 +118,9 @@ document.onclick = mclose;
             	<li class="collect"><a href="#"><img src="images/icon/collect.png" width="20" height="19" align="absmiddle" /></a></li>
                 <li class="share"><a href="#"><img src="images/icon/share.png" width="21" height="17" align="absmiddle" /></a></li>
                 <li class="like"><a href="#"><img src="images/icon/like_red.png" width="22" height="20" align="absmiddle" /></a>（2）</li>
+                <div class="dropbox">
+            	<div class="com_s clearfix"><a href="#"><span class="icon_sina2"></span></a><a href="#"><span class="icon_tt2"></span></a><a href="#"><span class="icon_douban"></span></a><a href="#"><span class="icon_renren"></span></a></div>
+              </div>
             </ul>
           </div>
           <img src="images/test/notes_img590.jpg" width="590" height="590" /></div>
