--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -23,6 +23,7 @@ p.iw_action {margin: 5px 0 10px 0;}
 .iw_comment {padding:10px 14px;border-top:1px solid #ccc;background-color:#f7f7f7;}
 .iw_comment .right textarea {display:block;width:146px;height:20px;margin-bottom:5px;background-color:#fff; overflow-x:auto; overflow-y:auto;}
 .iw_comment .right a {float:right;}
+.iw_user .right .date {float:right;font-size:10px;}
 
 a.btn_iw {background:url(common/iw_btn_left.png) no-repeat left 0;display:inline-block;padding-left:10px;color:#999;text-decoration:none;}
 a.btn_iw span {background:url(common/iw_btn_right.png) no-repeat right 0;display:inline-block;height:30px;line-height:30px;padding:0 10px 0 0px;}
