我的评论加上关于Notes

--- a/app/views/users/share/_comments.html.erb
+++ b/app/views/users/share/_comments.html.erb
@@ -91,14 +91,14 @@
     <% elsif comment.commentable_type == 'Note' %>
           <li>
             <div class="pic">
-              <%= link_to "/notes/#{comment.commentable_id}" do %>
+              <%= link_to note_path(comment.commentable_id) do %>
                   <%= cover_for_id(comment.commentable_id) %>
               <% end %>
             </div>
             <div class="main">
               <div class="winename">
                 评论了品酒辞:
-                <%= link_to 'aa', "/notes/#{comment.commentable_id}" %>
+                <%= link_to ename(comment.commentable), note_path(comment.commentable_id) %>
                 <span class="date">
               <%= comment.created_at.to_s(:normal)%>
 
