--- a/app/views/users/wine_follows.html.erb
+++ b/app/views/users/wine_follows.html.erb
@@ -5,6 +5,13 @@
     <div class="clear"></div>
     <div class="content">
       <div class="left">
+        <div class="tabs3">
+          <ul>
+            <li class="current"><%= link_to "关注的酒",wine_follows_user_path(@user.slug) %></li>
+            <li><%= link_to "关注的酒庄",winery_follows_user_path(@user.slug) %></li>
+            <li><%= link_to "关注的人",followings_user_path(@user.slug) %></li>
+          </ul>
+        </div>
         <div class="title_btn">
           <h1>关注的酒 <span class="font_12 more">(共 <%= @user.wine_followings_count %> 款)</span> </h1>
         </div>
