share icon modify

--- a/public/template/event_detail.html
+++ b/public/template/event_detail.html
@@ -116,7 +116,7 @@ document.onclick = mclose;
                 </div><-->
                 <div class="mb10">活动剩余名额：20</div>
                 <div class="action">
-                	<div class="share lh">分享到：<a href="#"><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_on.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/kaixin_s_on.png" alt="开心网" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/renren_s_on.png" alt="人人网" width="17" height="17" align="absmiddle" /></a></div>
+                	<div class="share">分享到：<a href="#"><span class="icon_renren"></span></a><a href="#"><span class="icon_douban"></span></a><a href="#"><span class="icon_tt2"></span></a><a href=" #"><span class="icon_sina2"></span></a></div>
                     <a href="#" class="btn_bluesky_ss mr5"><span>我要参加</span></a><a href="#" class="btn_bluesky_ss"><span>我感兴趣</span></a>
                 </div>
                 <!--<div class="action">
