--- a/public/template/wine_profile.html
+++ b/public/template/wine_profile.html
@@ -24,7 +24,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                     <input class="search" type="text" value="搜索酒款、酒庄" onclick="clearDefaultText(this,'搜索酒款、酒庄')"  />
                 </div>
             </form>
-            <div class="search_scroll">
+            <!--<div class="search_scroll">
                             <p class="title"><a href="#">搜索酒款 》</a></p>
                             <div class="wineResult">
                                 <dl class="clearfix current">
@@ -57,7 +57,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                                     <div class="clear"></div>
                                 </dl>
                             </div>
-                        </div>
+                        </div>-->
             <div id="top_right">
             	<ul>
                 	<li class="userbox">
@@ -84,7 +84,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                 <h1 class="wine_name_en">2005 PORTER MILL STATION Cabernet Sauvignon</h1>
             </div>
             <div class="wp_space_line ptb10">
-           	  <div class="share float_r pt5">分享到：<a href="#"><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_on.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/kaixin_s_on.png" alt="开心网" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/renren_s_on.png" alt="人人网" width="17" height="17" align="absmiddle" /></a></div>
+           	  <div class="share float_r pt5">分享到：<a href="#"><span class="icon_renren"></span></a><a href="#"><span class="icon_douban"></span></a><a href="#"><span class="icon_tt2"></span></a><a href=" #"><span class="icon_sina2"></span></a></div>
                 <div><span class="icon_fol mr5">已关注<span class="cancl_fol"><a href="#"> (取消)</a></span></span><a href="#" class="btn_gray mr5"><span>关注</span></a><a href="#" class="btn_gray mr5"><span>评论</span></a><a href="#" class="btn_gray mr5"><span>写品酒辞</span></a><a href="#" class="btn_gray"><span>加入酒窖</span></a></div>
                 <div class="clear"></div>
             </div>
