--- a/public/template/winery_photo_comment_detail.html
+++ b/public/template/winery_photo_comment_detail.html
@@ -72,35 +72,39 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                     </div>
                 </div>
                 <div class="right">
-                	<div class="share">
-                        分享到：<a href=" #"><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_on.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/kaixin_s_on.png" alt="开心网" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/renren_s_on.png" alt="人人网" width="17" height="17" align="absmiddle" /></a>
+                    <div class="score_star mb20">
+                        <span class="star star_b_s10"></span>
+                        <span class="iw_score"><span class="redscore">7.4</span> 分(36人评价)</span>
+                        <div class="clear"></div>
                     </div>
                     <ul class="item">
                     	<li>
-                            <p class="pic"><img src="images/icon/winery_photo.gif" width="34" height="26" /></p>
-                            <p><a href="#">照片</a></p>
+                            <p class="pic"><a href="#01"><img src="images/icon/winery_photo.gif" width="34" height="26" /></a></p>
+                            <p><a href="#01">照片</a></p>
                         </li>
                         <li>
-                            <p class="pic"><img src="images/icon/winery_intro.gif" width="26" height="30" /></p>
-                            <p><a href="#">介绍</a></p>
+                            <p class="pic"><a href="#02"><img src="images/icon/winery_intro.gif" width="26" height="30" /></a></p>
+                            <p><a href="#02">介绍</a></p>
                         </li>
                         <li class="last">
-                            <p class="pic"><img src="images/icon/winery_hot.gif" width="32" height="32" /></p>
-                            <p><a href="#">热门就狂</a></p>
+                            <p class="pic"><a href="#05"><img src="images/icon/winery_hot.gif" width="32" height="32" /></a></p>
+                            <p><a href="#05">热门酒款</a></p>
                         </li>
                         <li>
-                            <p class="pic"><img src="images/icon/winery_wine.gif" width="24" height="37" /></p>
-                            <p><a href="#">所有酒款</a></p>
+                            <p class="pic"><a href="#03"><img src="images/icon/winery_wine.gif" width="24" height="37" /></a></p>
+                            <p><a href="#03">所有酒款</a></p>
                         </li>
                         <li>
-                            <p class="pic"><img src="images/icon/winery_comment.gif" width="34" height="31" /></p>
-                            <p><a href="#">评论</a></p>
+                            <p class="pic"><a href="#04"><img src="images/icon/winery_comment.gif" width="34" height="31" /></a></p>
+                            <p><a href="#04">评论</a></p>
                         </li>
-                        <li class="last">
-                            <p class="pic"><img src="images/icon/winery_follower.gif" width="31" height="36" /></p>
-                            <p><a href="#">关注者</a></p>
-                        </li>
+                      <li class="last">
+                          <p class="pic"><a href="#06"><img src="images/icon/winery_follower.gif" width="31" height="36" /></a></p>
+                            <p><a href="#06">关注者</a></p>
+                      </li>
+                        <div class="clear"></div>
                     </ul>
+                    <div class="share">分享到：<a href=" #"><span class="icon_sina2"></span></a><a href="#"><span class="icon_tt2"></span></a><a href="#"><span class="icon_douban"></span></a><a href="#"><span class="icon_renren"></span></a></div>
                 </div>
                 <div class="clear"></div>
             </div>
@@ -114,18 +118,17 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                     </div>
                     <div class="content">
                     	<div class="album_left">
-<<<<<<< HEAD
-                            <div class="mb20">
-                                <div class="pre_next">
-                                    <span class="off"><a class="btn_gray mr5"><span>前一张</span></a></span><span class="count">1 / 25</span> <a href="#" class="btn_gray"><span>后一张</span></a>
-                                </div>
+                        <div class="mb20">
+                             <div class="pre_next">
+                              <span class="off"><a class="btn_gray mr5"><span>前一张</span></a></span><span class="count">1 / 25</span> <a href="#" class="btn_gray"><span>后一张</span></a>
+                              </div>
                             </div>
                             <div class="photo">
                                 <img src="images/test/winery_photo_b.jpg" width="537" height="334" alt="photo" />
                             </div>
                             <div class="info">
-                            	<div class="like float_r"><a href="#" class="icon_like">赞 (3)</a></div>
-                                <div class="share float_r">分享到：<a href=" #"><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_on.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/kaixin_s_on.png" alt="开心网" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/renren_s_on.png" alt="人人网" width="17" height="17" align="absmiddle" /></a> |</div>
+                            	<div class="like float_r">|&nbsp;&nbsp;&nbsp;<a href="#" class="icon_like">赞 (3)</a></div>
+                                <div class="share float_r">分享到：<a href="#"><span class="icon_renren"></span></a><a href="#"><span class="icon_douban"></span></a><a href="#"><span class="icon_tt2"></span></a><a href=" #"><span class="icon_sina2"></span></a></div>
                                 <div>10浏览 | 4评论</div>
                             </div>
                             <div class="comment">
@@ -225,37 +228,11 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                                     <div class="clear"></div>
                                 </div>
                             </div>
-=======
-            <div class="mb20">
-                <div class="pre_next"><span class="off"><a class="btn_gray mr5"><span>前一张</span></a></span><span class="count">1 / 25</span> <a href="#" class="btn_gray"><span>后一张</span></a></div>
-            </div>
-            <div class="photo">
-                <img src="images/test/winery_photo_b.jpg" width="537" height="334" alt="photo" />
-            </div>
-              <div class="info">
-            	<div class="like float_r">| &nbsp;&nbsp;&nbsp;<a href="#" class="icon_like">赞 (3)</a></div>
-                <div class="share float_r">分享到：<a href=" #"><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_on.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/renren_s_on.png" alt="人人网" width="17" height="17" align="absmiddle" /></a></div>
-                <div>10浏览 | 4评论</div>
-            </div>
-            <div class="comment">
-       	    <div class="mb20 clearfix">
-                <div class="title">
-                <a href="#01" class="btn_gray float_r"><span>添加评论</span></a>
-                <h3>评论</h3>
-                </div>
-              </div>
-               <ul class="comment_list">
-                	<li>
-                    	<div class="userpic"><a href="#"><img src="images/userimage/1.jpg" width="50" height="50" alt="username" /></a></div>
-                        <div class="main">
-                        	<div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
-                            <div class="content">好诱人的咖喱啊，我也好想吃！</div>
->>>>>>> template/album
-                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="right">
+                    </div>
+                    </div>
+                    </div>
+                    <div class="right">
            	  <div class="sidebox">
                 	<div class="title">
                 	  <h3><a name="05" id="05"></a>热门酒庄</h3></div>
@@ -302,8 +279,8 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                 </div>
             </div>
             <div class="clear"></div>
-        </div>
-</div>
+            </div>
+            </div>
     <div id="footer">
         <div class="link"><a href="aboutus.html">关于我们</a> | <a href="contactus.html">联系我们</a> | <a href="help.html">帮助中心</a> | <a href="privacy.html">隐私条款</a> | <a href="agreement.html">用户协议</a> | <a href="disclaimer.html">免责声明</a> | <a href="sitemap.html">网站地图</a> | <a href="feedback.html">意见反馈</a></div>
         <div class="copyright">Copyright © 2011 iWine, Inc. All rights reserved. <a href="#">沪ICP备12345678号</a></div>
