--- a/app/views/users/share/_comments.html.erb
+++ b/app/views/users/share/_comments.html.erb
@@ -92,7 +92,7 @@
           <li>
             <div class="pic">
               <%= link_to note_path(comment.commentable_id) do %>
-                  <%= cover_for_id(comment.commentable_id) %>
+                  <%= cover_for_id(comment.commentable_id,'70x70') %>
               <% end %>
             </div>
             <div class="main">
